--- a/css/messtylesajoutes.css
+++ b/css/messtylesajoutes.css
@@ -2,3 +2,23 @@
     border-radius: 50%;
     width: 150px;
 }
+
+.row-grid {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+.column-grid {
+    flex: 25%;
+    padding: 0 4px;
+}
+  
+.column-grid img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 250px;
+}
+
+
+
